--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "1.19.0",
     "express": "4.17.1",
     "mongoose": "5.6.7",
-    "nodemon": "1.19.1"
+    "morgan": "^1.9.1",
+    "nodemon": "1.19.1",
+    "rand-token": "^0.4.0"
   }
 }
