--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "homepage": "https://github.com/mikemartinezr7/titandev#readme",
   "dependencies": {
-    "body-parser": "1.19.0",
-    "express": "4.17.1",
-    "mongoose": "5.6.7",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.7",
     "morgan": "^1.9.1",
-    "nodemon": "1.19.1",
+    "nodemon": "^1.19.1",
     "rand-token": "^0.4.0"
   }
 }
