--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.6.7",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
+    "path": "^0.12.7",
     "rand-token": "^0.4.0"
   }
 }
