--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
-    "rand-token": "^0.4.0"
+    "rand-token": "^0.4.0",
+    "sweetalert": "^2.1.2"
   }
 }
