cambios en autores

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "rand-token": "^0.4.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^8.15.2"
   }
 }
