Cambios en layout

--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,9 @@
 {
-    "server": {
-        "name": "localhost",
-        "port": "3000"
-    },
-    "db": {
-        "server": "localhost",
-        "port": "27017",
-        "name": "library"
-    }
+  "server": {
+    "name": "localhost",
+    "port": "3000"
+  },
+  "db": {
+    "connectionString": "mongodb://localhost:27017/library"
+  }
 }
-
