--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
     "mongoose": "^5.6.7",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
