--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.7",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "rand-token": "^0.4.0",
